# mu-unscramble-bot

./: .env.example  .gitignore  README.md  Start MU Unscramble Bot.cmd  Start MU Unscramble Bot.vbs  config.json  pyproject.toml
.github/workflows/: release.yml
data/: local_dictionary.txt  question_memory.csv
mu_unscramble_bot/: __init__.py  __main__.py  bot.py  cli.py  config.py  github_answer_sheet.py  gui.py  memory_store.py  models.py  net.py  overlay.py  parser.py  paths.py  privilege.py  screen_reader.py  solver.py  submitter.py  updater.py  window_target.py
scripts/: build_release.ps1  build_update_manifest.py
